close btn z-index bug fix

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -29,6 +29,7 @@
   color: #aaa;
   font-size: 28px;
   font-weight: bold;
+  z-index: 1;
 }
 
 .close:hover,
